--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -2,8 +2,31 @@
 
 {% block content %}
 
-<h1>About Page</h1>
+<h1 class="display-4">About Me</h1>
+
+<p>
+    <li>A human</li>
+    <li>Named Grant Hussey</li>
+    <li>PhD Student</li>
+    <li>Currently social distancing</li>
+
+</p>
+
 <br>
-I am a human being under social distancing and decided to make a thing
+
+<p>
+    Visit me on <a href="http://www.github.com/granthussey">GitHub</a>, or my own <a
+        href="https://www.granthussey.com">personal website</a> (despite it needing a lot of updates)
+</p>
+
+<br>
+
+<p>
+    Here are some of my other projects: <br>
+    <a href="http://www.hillaryinthewoods.com/">Hillary In The Woods</a> <br>
+    <a href="http://www.gaybloodban.com/">Gay Blood Ban</a> <br>
+    <a href="http://www.newgayagenda.com/">New Gay Agenda (currently accepting platform ideas)</a> <br>
+    And last but not least, <a href="http://www.arethegaysangry.com/">Are The Gays Angry? Dot Com</a> <br>
+</p>
 
 {% endblock content %}
