--- a/flaskapp/templates/about.html
+++ b/flaskapp/templates/about.html
@@ -6,9 +6,10 @@
 
 <p>
     <li>A human</li>
-    <li>Named Grant Hussey</li>
+    <li>Named Grant</li>
     <li>PhD Student</li>
     <li>Currently social distancing</li>
+    <li>I built this site, it was me, thanks Flask microframework</li>
 
 </p>
 
@@ -27,6 +28,22 @@
     <a href="http://www.gaybloodban.com/">Gay Blood Ban</a> <br>
     <a href="http://www.newgayagenda.com/">New Gay Agenda (currently accepting platform ideas)</a> <br>
     And last but not least, <a href="http://www.arethegaysangry.com/">Are The Gays Angry? Dot Com</a> <br>
+</p>
+
+<br>
+
+<p>
+
+    Special thanks to Brandon for original dataset. <br>
+    <a href="https://docs.google.com/spreadsheets/d/1ooePgv7AmENQsoxPuvChIa3S4CnZlUgwMLHXTjKXf-4/edit#gid=0">See that
+        original dataset here. Drop them a Venmo.</a>
+
+    <br>
+    <br>
+
+    (Or if you like this website, maybe drop me a Venmo @granthussey)
+
+
 </p>
 
 {% endblock content %}
